--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 node_modules
 node_modules/**/*
+npm-debug.log
 .DS_Store
 tmp/**/*
 .idea
 .idea/**/*
 *.iml
 *.log
-examples/keys.json
+.nyc_output
