--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,10 @@
 node_modules
+node_modules/**/*
 npm-debug.log
-examples/keys.json
+.DS_Store
+tmp/**/*
+.idea
+.idea/**/*
+*.iml
+*.log
+.nyc_output
